fix: beth harmon

--- a/main/index.html
+++ b/main/index.html
@@ -421,7 +421,7 @@
     </div>
     <div class="ig">
       <div class="ig-header">
-        <img src="https://static.wikia.nocookie.net/the-queens-gambit/images/e/ea/MP_Beth_Harmon.jpg/revision/latest?cb=20201012200522" alt="profile" class="ig-profile">
+        <img src="https://upload.wikimedia.org/wikipedia/en/8/8e/BethHarmon.jpg" alt="profile" class="ig-profile">
         <span class="username">beth_harmonica</span>
       </div>
 
