--- a/main/index.html
+++ b/main/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="flowers.png" type="image/x-icon">
-    <title>Flowers</title>
+    <title>Tati</title>
 </head>
 <body>
 
@@ -14,7 +14,7 @@
 <body>
 
   <div class="intro">
-    <h1 class="question">Do you want to see something?</h1>
+    <h1 class="question">Do you like surprises?</h1>
     <button class="choice" id="yes" onclick="yes()">YES</button>
     <button class="choice" id="no" onclick="no()">NO</button>
   </div>
@@ -23,7 +23,7 @@
   <div class="container all-flowers">
     <div class="night"></div>
     <h1 class="title">
-        Happy Girlfriend's Day!
+        Happy Day!
     </h1>
     <div class="flowers">
       <div class="flower flower--1">
